--- a/InvenTree/locale/de/LC_MESSAGES/django.po
+++ b/InvenTree/locale/de/LC_MESSAGES/django.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-04-29 04:57+0000\n"
-"PO-Revision-Date: 2021-04-29 15:08\n"
+"POT-Creation-Date: 2021-04-30 01:54+0000\n"
+"PO-Revision-Date: 2021-04-30 06:09\n"
 "Last-Translator: \n"
 "Language-Team: German\n"
 "Language: de_DE\n"
@@ -5891,6 +5891,33 @@ msgstr "an Kunde versand"
 msgid "No stock location set"
 msgstr "Kein Lagerort gesetzt"
 
+#: templates/InvenTree/settings/appearance.html:10
+msgid "Theme Settings"
+msgstr "Anzeige-Einstellungen"
+
+#: templates/InvenTree/settings/appearance.html:17
+msgid "Color Themes"
+msgstr "Farbschemata"
+
+#: templates/InvenTree/settings/appearance.html:29
+#, python-format
+msgid "\n"
+"        The CSS sheet \"%(invalid_color_theme)s.css\" for the currently selected color theme was not found.<br>\n"
+"        Please select another color theme :)\n"
+"    "
+msgstr "\n"
+"\t\tDie CSS Datei \"%(invalid_color_theme)s.css\" für das aktuell ausgewählte Farbschema wurde nicht gefunden.<br>\n"
+"\t\tBitte ein anderes Farbschema auswählen:)\n"
+"\t    "
+
+#: templates/InvenTree/settings/appearance.html:39
+msgid "Language"
+msgstr "Sprache"
+
+#: templates/InvenTree/settings/appearance.html:61
+msgid "Set Language"
+msgstr "Sprache festlegen"
+
 #: templates/InvenTree/settings/build.html:10
 msgid "Build Order Settings"
 msgstr "Bauauftrag-Einstellungen"
@@ -5988,8 +6015,8 @@ msgid "Account"
 msgstr "Konto"
 
 #: templates/InvenTree/settings/tabs.html:9
-msgid "Theme"
-msgstr "Thema"
+msgid "Appearance"
+msgstr "Anzeige"
 
 #: templates/InvenTree/settings/tabs.html:13
 msgid "InvenTree Settings"
@@ -6006,25 +6033,6 @@ msgstr "Bericht"
 #: templates/InvenTree/settings/tabs.html:22
 msgid "Categories"
 msgstr "Kategorien"
-
-#: templates/InvenTree/settings/theme.html:10
-msgid "Theme Settings"
-msgstr "Anzeige-Einstellungen"
-
-#: templates/InvenTree/settings/theme.html:17
-msgid "Color Themes"
-msgstr "Farbschemata"
-
-#: templates/InvenTree/settings/theme.html:29
-#, python-format
-msgid "\n"
-"        The CSS sheet \"%(invalid_color_theme)s.css\" for the currently selected color theme was not found.<br>\n"
-"        Please select another color theme :)\n"
-"    "
-msgstr "\n"
-"\t\tDie CSS Datei \"%(invalid_color_theme)s.css\" für das aktuell ausgewählte Farbschema wurde nicht gefunden.<br>\n"
-"\t\tBitte ein anderes Farbschema auswählen:)\n"
-"\t    "
 
 #: templates/InvenTree/settings/user.html:16
 msgid "User Information"
